packages/llm_llamacpp/src/llama.h

//
// C interface
//
// TODO: show sample usage
//

// Forward declarations
struct llama_model;
struct llama_context;
struct llama_sampler;
typedef struct llama_model llama_model;
typedef struct llama_context llama_context;
typedef struct llama_sampler llama_sampler;
typedef int32_t llama_pos;
typedef int32_t llama_token;
typedef int32_t llama_seq_id;
// Model vocabulary type
enum llama_vocab_type {
    LLAMA_VOCAB_TYPE_NONE = 0, // For models without a vocabulary
    LLAMA_VOCAB_TYPE_SPM  = 1, // SentencePiece
    LLAMA_VOCAB_TYPE_BPE  = 2, // Byte Pair Encoding
    LLAMA_VOCAB_TYPE_WPM  = 3, // WordPiece
    LLAMA_VOCAB_TYPE_UGM  = 4, // Unigram
    LLAMA_VOCAB_TYPE_RWKV = 5, // RWKV
};
// Token types
enum llama_token_type {
    LLAMA_TOKEN_TYPE_UNDEFINED    = 0,
    LLAMA_TOKEN_TYPE_NORMAL       = 1,
    LLAMA_TOKEN_TYPE_UNKNOWN      = 2,
    LLAMA_TOKEN_TYPE_CONTROL      = 3,
    LLAMA_TOKEN_TYPE_USER_DEFINED = 4,
    LLAMA_TOKEN_TYPE_UNUSED       = 5,
    LLAMA_TOKEN_TYPE_BYTE         = 6,
};
// Model file types
enum llama_ftype {
    LLAMA_FTYPE_ALL_F32              = 0,
    LLAMA_FTYPE_MOSTLY_F16           = 1,
    LLAMA_FTYPE_MOSTLY_Q4_0          = 2,
    LLAMA_FTYPE_MOSTLY_Q4_1          = 3,
    LLAMA_FTYPE_MOSTLY_Q8_0          = 7,
    // ... more quantization types
};
// Split mode
enum llama_split_mode {
    LLAMA_SPLIT_MODE_NONE  = 0, // single GPU
    LLAMA_SPLIT_MODE_LAYER = 1, // split layers across GPUs
    LLAMA_SPLIT_MODE_ROW   = 2, // split rows across GPUs
};
// RoPE scaling type
enum llama_rope_scaling_type {
    LLAMA_ROPE_SCALING_TYPE_UNSPECIFIED = -1,
    LLAMA_ROPE_SCALING_TYPE_NONE        = 0,
    LLAMA_ROPE_SCALING_TYPE_LINEAR      = 1,
    LLAMA_ROPE_SCALING_TYPE_YARN        = 2,
    LLAMA_ROPE_SCALING_TYPE_MAX_VALUE   = LLAMA_ROPE_SCALING_TYPE_YARN,
};
// Pooling type
enum llama_pooling_type {
    LLAMA_POOLING_TYPE_UNSPECIFIED = -1,
    LLAMA_POOLING_TYPE_NONE = 0,
    LLAMA_POOLING_TYPE_MEAN = 1,
    LLAMA_POOLING_TYPE_CLS  = 2,
    LLAMA_POOLING_TYPE_LAST = 3,
};
// Attention type
enum llama_attention_type {
    LLAMA_ATTENTION_TYPE_UNSPECIFIED = -1,
    LLAMA_ATTENTION_TYPE_CAUSAL      = 0,
    LLAMA_ATTENTION_TYPE_NON_CAUSAL  = 1,
};
// Model parameters
struct llama_model_params {
    int32_t n_gpu_layers;      // number of layers to store in VRAM
    enum llama_split_mode split_mode; // how to split the model across GPUs
    int32_t main_gpu;          // main GPU to use
    const float * tensor_split; // how to split layers across GPUs (size: 128)
    
    // Progress callback
    void * progress_callback_user_data;
    
    // Override key-value pairs
    const void * kv_overrides;
    
    // Model vocabulary type override
    bool vocab_only;
    bool use_mmap;
    bool use_mlock;
    bool check_tensors;
};
// Context parameters
struct llama_context_params {
    uint32_t n_ctx;            // text context, 0 = from model
    uint32_t n_batch;          // logical maximum batch size
    uint32_t n_ubatch;         // physical maximum batch size
    uint32_t n_seq_max;        // max number of sequences
    int32_t  n_threads;        // number of threads for generation
    int32_t  n_threads_batch;  // number of threads for batch processing
    
    enum llama_rope_scaling_type rope_scaling_type;
    enum llama_pooling_type      pooling_type;
    enum llama_attention_type    attention_type;
    
    float rope_freq_base;
    float rope_freq_scale;
    float yarn_ext_factor;
    float yarn_attn_factor;
    float yarn_beta_fast;
    float yarn_beta_slow;
    uint32_t yarn_orig_ctx;
    float defrag_thold;
    
    // Abort callback
    void * abort_callback;
    void * abort_callback_data;
    
    // Type of quantization
    int type_k;
    int type_v;
    
    bool logits_all;
    bool embeddings;
    bool offload_kqv;
    bool flash_attn;
    bool no_perf;
};
// Get vocabulary type
enum llama_vocab_type llama_vocab_type(const llama_model * model);
llama_sampler * llama_sampler_init_dist(uint32_t seed);
llama_sampler * llama_sampler_init_top_k(int32_t k);
llama_sampler * llama_sampler_init_top_p(float p, size_t min_keep);
llama_sampler * llama_sampler_init_min_p(float p, size_t min_keep);
llama_sampler * llama_sampler_init_temp(float t);
llama_sampler * llama_sampler_init_temp_ext(float t, float delta, float exponent);
llama_sampler * llama_sampler_init_penalties(
    int32_t n_vocab,
    llama_token special_eos_id,
    llama_token linefeed_id,
    int32_t penalty_last_n,
    float penalty_repeat,
    float penalty_freq,
    float penalty_present,
    bool penalize_nl,
    bool ignore_eos);
//
// Timing
//

// Performance timing info
void llama_perf_context_print(const llama_context * ctx);
void llama_perf_context_reset(llama_context * ctx);
//
// Misc
//

// Print system info
const char * llama_print_system_info(void);
// Set log callback
void llama_log_set(void * log_callback, void * user_data);
// Get number of physical CPU cores
int32_t llama_max_devices(void);