packages/llm_llamacpp/lib/src/bindings/llama_bindings.dart


  late final _llama_sampler_init_distPtr =
      _lookup<
        ffi.NativeFunction<ffi.Pointer<llama_sampler> Function(ffi.Uint32)>
      >('llama_sampler_init_dist');
  late final _llama_sampler_init_dist = _llama_sampler_init_distPtr
      .asFunction<ffi.Pointer<llama_sampler> Function(int)>();

  ffi.Pointer<llama_sampler> llama_sampler_init_top_k(int k) {
    return _llama_sampler_init_top_k(k);
  }

  late final _llama_sampler_init_top_kPtr =
      _lookup<
        ffi.NativeFunction<ffi.Pointer<llama_sampler> Function(ffi.Int32)>
      >('llama_sampler_init_top_k');
  late final _llama_sampler_init_top_k = _llama_sampler_init_top_kPtr
      .asFunction<ffi.Pointer<llama_sampler> Function(int)>();

  ffi.Pointer<llama_sampler> llama_sampler_init_top_p(double p, int min_keep) {
    return _llama_sampler_init_top_p(p, min_keep);
  }

  late final _llama_sampler_init_top_pPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Pointer<llama_sampler> Function(ffi.Float, ffi.Size)
        >
      >('llama_sampler_init_top_p');
  late final _llama_sampler_init_top_p = _llama_sampler_init_top_pPtr
      .asFunction<ffi.Pointer<llama_sampler> Function(double, int)>();

  ffi.Pointer<llama_sampler> llama_sampler_init_min_p(double p, int min_keep) {
    return _llama_sampler_init_min_p(p, min_keep);
  }

  late final _llama_sampler_init_min_pPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Pointer<llama_sampler> Function(ffi.Float, ffi.Size)
        >
      >('llama_sampler_init_min_p');
  late final _llama_sampler_init_min_p = _llama_sampler_init_min_pPtr
      .asFunction<ffi.Pointer<llama_sampler> Function(double, int)>();

  ffi.Pointer<llama_sampler> llama_sampler_init_temp(double t) {
    return _llama_sampler_init_temp(t);
  }

  late final _llama_sampler_init_tempPtr =
      _lookup<
        ffi.NativeFunction<ffi.Pointer<llama_sampler> Function(ffi.Float)>
      >('llama_sampler_init_temp');
  late final _llama_sampler_init_temp = _llama_sampler_init_tempPtr
      .asFunction<ffi.Pointer<llama_sampler> Function(double)>();

  ffi.Pointer<llama_sampler> llama_sampler_init_temp_ext(
    double t,
    double delta,
    double exponent,
  ) {
    return _llama_sampler_init_temp_ext(t, delta, exponent);
  }

  late final _llama_sampler_init_temp_extPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Pointer<llama_sampler> Function(ffi.Float, ffi.Float, ffi.Float)
        >
      >('llama_sampler_init_temp_ext');
  late final _llama_sampler_init_temp_ext = _llama_sampler_init_temp_extPtr
      .asFunction<
        ffi.Pointer<llama_sampler> Function(double, double, double)
      >();

  ffi.Pointer<llama_sampler> llama_sampler_init_penalties(
    int n_vocab,
    int special_eos_id,
    int linefeed_id,
    int penalty_last_n,
    double penalty_repeat,
    double penalty_freq,
    double penalty_present,
    bool penalize_nl,
    bool ignore_eos,
  ) {
    return _llama_sampler_init_penalties(
      n_vocab,
      special_eos_id,
      linefeed_id,
      penalty_last_n,
      penalty_repeat,
      penalty_freq,
      penalty_present,
      penalize_nl,
      ignore_eos,
    );
  }

  late final _llama_sampler_init_penaltiesPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Pointer<llama_sampler> Function(
            ffi.Int32,
            llama_token,
            llama_token,
            ffi.Int32,
            ffi.Float,
            ffi.Float,
            ffi.Float,
            ffi.Bool,
            ffi.Bool,
          )
        >
      >('llama_sampler_init_penalties');
  late final _llama_sampler_init_penalties = _llama_sampler_init_penaltiesPtr
      .asFunction<
        ffi.Pointer<llama_sampler> Function(
          int,
          int,
          int,
          int,
          double,
          double,
          double,
          bool,
          bool,
        )
      >();

  /// Performance timing info
  void llama_perf_context_print(ffi.Pointer<llama_context> ctx) {
    return _llama_perf_context_print(ctx);
  }

  late final _llama_perf_context_printPtr =
      _lookup<
        ffi.NativeFunction<ffi.Void Function(ffi.Pointer<llama_context>)>
      >('llama_perf_context_print');
  late final _llama_perf_context_print = _llama_perf_context_printPtr
      .asFunction<void Function(ffi.Pointer<llama_context>)>();

  void llama_perf_context_reset(ffi.Pointer<llama_context> ctx) {
    return _llama_perf_context_reset(ctx);
  }

  late final _llama_perf_context_resetPtr =
      _lookup<
        ffi.NativeFunction<ffi.Void Function(ffi.Pointer<llama_context>)>
      >('llama_perf_context_reset');
  late final _llama_perf_context_reset = _llama_perf_context_resetPtr
      .asFunction<void Function(ffi.Pointer<llama_context>)>();

  /// Print system info
  ffi.Pointer<ffi.Char> llama_print_system_info() {
    return _llama_print_system_info();
  }

  late final _llama_print_system_infoPtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<ffi.Char> Function()>>(
        'llama_print_system_info',
      );
  late final _llama_print_system_info = _llama_print_system_infoPtr
      .asFunction<ffi.Pointer<ffi.Char> Function()>();

  /// Set log callback
  void llama_log_set(
    ffi.Pointer<ffi.Void> log_callback,
    ffi.Pointer<ffi.Void> user_data,
  ) {
    return _llama_log_set(log_callback, user_data);
  }

  late final _llama_log_setPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<ffi.Void>, ffi.Pointer<ffi.Void>)
        >
      >('llama_log_set');
  late final _llama_log_set = _llama_log_setPtr
      .asFunction<
        void Function(ffi.Pointer<ffi.Void>, ffi.Pointer<ffi.Void>)
      >();

  /// Get number of physical CPU cores
  int llama_max_devices() {
    return _llama_max_devices();
  }

  late final _llama_max_devicesPtr =
      _lookup<ffi.NativeFunction<ffi.Int32 Function()>>('llama_max_devices');
  late final _llama_max_devices = _llama_max_devicesPtr
      .asFunction<int Function()>();
}

/// Forward declarations
final class llama_model extends ffi.Opaque {}

final class llama_context extends ffi.Opaque {}

final class llama_sampler extends ffi.Opaque {}

typedef llama_pos = ffi.Int32;
typedef Dartllama_pos = int;
typedef llama_token = ffi.Int32;
typedef Dartllama_token = int;
typedef llama_seq_id = ffi.Int32;
typedef Dartllama_seq_id = int;

/// Model vocabulary type
enum llama_vocab_type {
  /// For models without a vocabulary
  LLAMA_VOCAB_TYPE_NONE(0),

  /// SentencePiece
  LLAMA_VOCAB_TYPE_SPM(1),

  /// Byte Pair Encoding
  LLAMA_VOCAB_TYPE_BPE(2),

  /// WordPiece
  LLAMA_VOCAB_TYPE_WPM(3),

  /// Unigram
  LLAMA_VOCAB_TYPE_UGM(4),

  /// RWKV
  LLAMA_VOCAB_TYPE_RWKV(5);

  final int value;
  const llama_vocab_type(this.value);

  static llama_vocab_type fromValue(int value) => switch (value) {
    0 => LLAMA_VOCAB_TYPE_NONE,
    1 => LLAMA_VOCAB_TYPE_SPM,
    2 => LLAMA_VOCAB_TYPE_BPE,
    3 => LLAMA_VOCAB_TYPE_WPM,
    4 => LLAMA_VOCAB_TYPE_UGM,
    5 => LLAMA_VOCAB_TYPE_RWKV,
    _ => throw ArgumentError('Unknown value for llama_vocab_type: $value'),
  };
}

/// Token types
enum llama_token_type {
  LLAMA_TOKEN_TYPE_UNDEFINED(0),
  LLAMA_TOKEN_TYPE_NORMAL(1),
  LLAMA_TOKEN_TYPE_UNKNOWN(2),
  LLAMA_TOKEN_TYPE_CONTROL(3),
  LLAMA_TOKEN_TYPE_USER_DEFINED(4),
  LLAMA_TOKEN_TYPE_UNUSED(5),
  LLAMA_TOKEN_TYPE_BYTE(6);

  final int value;
  const llama_token_type(this.value);

  static llama_token_type fromValue(int value) => switch (value) {
    0 => LLAMA_TOKEN_TYPE_UNDEFINED,
    1 => LLAMA_TOKEN_TYPE_NORMAL,
    2 => LLAMA_TOKEN_TYPE_UNKNOWN,
    3 => LLAMA_TOKEN_TYPE_CONTROL,
    4 => LLAMA_TOKEN_TYPE_USER_DEFINED,
    5 => LLAMA_TOKEN_TYPE_UNUSED,
    6 => LLAMA_TOKEN_TYPE_BYTE,
    _ => throw ArgumentError('Unknown value for llama_token_type: $value'),
  };
}

/// Model file types
enum llama_ftype {
  LLAMA_FTYPE_ALL_F32(0),
  LLAMA_FTYPE_MOSTLY_F16(1),
  LLAMA_FTYPE_MOSTLY_Q4_0(2),
  LLAMA_FTYPE_MOSTLY_Q4_1(3),
  LLAMA_FTYPE_MOSTLY_Q8_0(7);

  final int value;
  const llama_ftype(this.value);

  static llama_ftype fromValue(int value) => switch (value) {
    0 => LLAMA_FTYPE_ALL_F32,
    1 => LLAMA_FTYPE_MOSTLY_F16,
    2 => LLAMA_FTYPE_MOSTLY_Q4_0,
    3 => LLAMA_FTYPE_MOSTLY_Q4_1,
    7 => LLAMA_FTYPE_MOSTLY_Q8_0,
    _ => throw ArgumentError('Unknown value for llama_ftype: $value'),
  };
}

/// Split mode
enum llama_split_mode {
  /// single GPU
  LLAMA_SPLIT_MODE_NONE(0),

  /// split layers across GPUs
  LLAMA_SPLIT_MODE_LAYER(1),

  /// split rows across GPUs
  LLAMA_SPLIT_MODE_ROW(2);

  final int value;
  const llama_split_mode(this.value);

  static llama_split_mode fromValue(int value) => switch (value) {
    0 => LLAMA_SPLIT_MODE_NONE,
    1 => LLAMA_SPLIT_MODE_LAYER,
    2 => LLAMA_SPLIT_MODE_ROW,
    _ => throw ArgumentError('Unknown value for llama_split_mode: $value'),
  };
}

/// RoPE scaling type
enum llama_rope_scaling_type {
  LLAMA_ROPE_SCALING_TYPE_UNSPECIFIED(-1),
  LLAMA_ROPE_SCALING_TYPE_NONE(0),
  LLAMA_ROPE_SCALING_TYPE_LINEAR(1),
  LLAMA_ROPE_SCALING_TYPE_YARN(2);

  static const LLAMA_ROPE_SCALING_TYPE_MAX_VALUE = LLAMA_ROPE_SCALING_TYPE_YARN;

  final int value;
  const llama_rope_scaling_type(this.value);

  static llama_rope_scaling_type fromValue(int value) => switch (value) {
    -1 => LLAMA_ROPE_SCALING_TYPE_UNSPECIFIED,
    0 => LLAMA_ROPE_SCALING_TYPE_NONE,
    1 => LLAMA_ROPE_SCALING_TYPE_LINEAR,
    2 => LLAMA_ROPE_SCALING_TYPE_YARN,
    _ => throw ArgumentError(
      'Unknown value for llama_rope_scaling_type: $value',
    ),
  };

  @override
  String toString() {
    if (this == LLAMA_ROPE_SCALING_TYPE_YARN)
      return "llama_rope_scaling_type.LLAMA_ROPE_SCALING_TYPE_YARN, llama_rope_scaling_type.LLAMA_ROPE_SCALING_TYPE_MAX_VALUE";
    return super.toString();
  }
}

/// Pooling type
enum llama_pooling_type {
  LLAMA_POOLING_TYPE_UNSPECIFIED(-1),
  LLAMA_POOLING_TYPE_NONE(0),
  LLAMA_POOLING_TYPE_MEAN(1),
  LLAMA_POOLING_TYPE_CLS(2),
  LLAMA_POOLING_TYPE_LAST(3);

  final int value;
  const llama_pooling_type(this.value);

  static llama_pooling_type fromValue(int value) => switch (value) {
    -1 => LLAMA_POOLING_TYPE_UNSPECIFIED,
    0 => LLAMA_POOLING_TYPE_NONE,
    1 => LLAMA_POOLING_TYPE_MEAN,
    2 => LLAMA_POOLING_TYPE_CLS,
    3 => LLAMA_POOLING_TYPE_LAST,
    _ => throw ArgumentError('Unknown value for llama_pooling_type: $value'),
  };
}

/// Attention type
enum llama_attention_type {
  LLAMA_ATTENTION_TYPE_UNSPECIFIED(-1),
  LLAMA_ATTENTION_TYPE_CAUSAL(0),
  LLAMA_ATTENTION_TYPE_NON_CAUSAL(1);

  final int value;
  const llama_attention_type(this.value);

  static llama_attention_type fromValue(int value) => switch (value) {
    -1 => LLAMA_ATTENTION_TYPE_UNSPECIFIED,
    0 => LLAMA_ATTENTION_TYPE_CAUSAL,
    1 => LLAMA_ATTENTION_TYPE_NON_CAUSAL,
    _ => throw ArgumentError('Unknown value for llama_attention_type: $value'),
  };
}

/// Model parameters
final class llama_model_params extends ffi.Struct {
  /// number of layers to store in VRAM
  @ffi.Int32()
  external int n_gpu_layers;

  /// how to split the model across GPUs
  @ffi.UnsignedInt()
  external int split_modeAsInt;

  llama_split_mode get split_mode =>
      llama_split_mode.fromValue(split_modeAsInt);

  /// main GPU to use
  @ffi.Int32()
  external int main_gpu;

  /// how to split layers across GPUs (size: 128)
  external ffi.Pointer<ffi.Float> tensor_split;

  /// Progress callback
  external ffi.Pointer<ffi.Void> progress_callback_user_data;

  /// Override key-value pairs
  external ffi.Pointer<ffi.Void> kv_overrides;

  /// Model vocabulary type override
  @ffi.Bool()
  external bool vocab_only;

  @ffi.Bool()
  external bool use_mmap;

  @ffi.Bool()
  external bool use_mlock;

  @ffi.Bool()
  external bool check_tensors;
}

/// Context parameters
final class llama_context_params extends ffi.Struct {
  /// text context, 0 = from model
  @ffi.Uint32()
  external int n_ctx;
